<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="44dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/closeCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/secondary"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/close_icon"
                    android:padding="14dp"
                    android:src="@drawable/ic_close" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/mark_pro_medium"
                android:gravity="center"
                android:text="@string/filter_options"
                android:textColor="@color/secondary"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:fontFamily="@font/mark_pro_medium"
                android:paddingTop="4dp"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:cornerRadius="10dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:fontFamily="@font/mark_pro_medium"
            android:text="@string/brand"
            android:textColor="@color/secondary"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/brandAutoCompleteTextInputLayout"
            style="@style/DropDownInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/brandAutoCompleteTextView"
                style="@style/AutoCompleteTextViewStyle"
                android:text="@string/filter_bottom_sheet_default_brand"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/mark_pro_medium"
            android:text="@string/price"
            android:textColor="@color/secondary"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceAutoCompleteTextInputLayout"
            style="@style/DropDownInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/priceAutoCompleteTextView"
                style="@style/AutoCompleteTextViewStyle"
                android:text="@string/filter_bottom_sheet_default_price"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/mark_pro_medium"
            android:text="@string/price"
            android:textColor="@color/secondary"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sizeAutoCompleteTextInputLayout"
            style="@style/DropDownInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/sizeCompleteTextView"
                style="@style/AutoCompleteTextViewStyle"
                android:text="@string/filter_bottom_sheet_default_size"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>