<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.HomeStoreFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/surface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/mark_pro_medium"
                    android:text="@string/address"
                    android:textColor="@color/secondary"
                    android:textSize="15sp"
                    app:drawableLeftCompat="@drawable/ic_location"
                    app:drawableRightCompat="@drawable/ic_arrow_down" />

                <ImageView
                    android:id="@+id/filterIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="26dp"
                    android:contentDescription="@string/filter_icon"
                    android:fontFamily="@font/mark_pro_bold"
                    android:padding="8dp"
                    android:src="@drawable/ic_filter"
                    android:textSize="24sp" />

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/categoryLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/mark_pro_bold"
                    android:text="@string/select_category"
                    android:textColor="@color/secondary"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mark_pro_normal"
                    android:text="@string/view_all"
                    android:textColor="@color/primary"
                    android:textSize="14sp" />

            </LinearLayout>

            <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
                android:id="@+id/toggleButtonGroup"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginTop="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryLinearLayout"
                app:toggle_requiredAmount="1">

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/phoneButton"
                    style="@style/ToggleButtonTheme"
                    app:toggle_icon="@drawable/ic_phone"
                    app:toggle_text="phoneButton" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/computerButton"
                    style="@style/ToggleButtonTheme"
                    app:toggle_icon="@drawable/ic_computer"
                    app:toggle_text="computerButton" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/healthButton"
                    style="@style/ToggleButtonTheme"
                    app:toggle_icon="@drawable/ic_health"
                    app:toggle_text="healthButton" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/booksButton"
                    style="@style/ToggleButtonTheme"
                    app:toggle_icon="@drawable/ic_books"
                    app:toggle_text="booksButton" />

            </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

            <LinearLayout
                android:id="@+id/categoryTextsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggleButtonGroup">

                <TextView
                    android:id="@+id/phoneTV"
                    style="@style/SelectCategoryTextView"
                    android:text="@string/phones"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/computerTV"
                    style="@style/SelectCategoryTextView"
                    android:text="@string/computer" />

                <TextView
                    android:id="@+id/healthTV"
                    style="@style/SelectCategoryTextView"
                    android:text="@string/health" />

                <TextView
                    android:id="@+id/booksTV"
                    style="@style/SelectCategoryTextView"
                    android:text="@string/books" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchTextInputLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toStartOf="@+id/qrCodeCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryTextsLinearLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="24dp"
                    android:fontFamily="@font/mark_pro_medium"
                    android:hint="@string/search"
                    android:paddingStart="24dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/input_text_color"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/qrCodeCardView"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginEnd="37dp"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="34dp"
                app:layout_constraintBottom_toBottomOf="@+id/searchTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/searchTextInputLayout">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/qr_code_icon"
                    android:src="@drawable/ic_qr_code" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/hotSalesLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchTextInputLayout">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/mark_pro_bold"
                    android:text="@string/hot_sales"
                    android:textColor="@color/secondary"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mark_pro_normal"
                    android:text="@string/see_more"
                    android:textColor="@color/primary"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/hotSalesViewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="180dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hotSalesLinearLayout" />

            <ProgressBar
                android:id="@+id/hotSalesProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/primary"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/hotSalesViewPager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hotSalesLinearLayout" />

            <LinearLayout
                android:id="@+id/bestSellerLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hotSalesViewPager">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/mark_pro_bold"
                    android:text="@string/best_seller"
                    android:textColor="@color/secondary"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mark_pro_normal"
                    android:text="@string/see_more"
                    android:textColor="@color/primary"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bestSellerRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="74dp"
                android:minHeight="180dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bestSellerLinearLayout"
                app:spanCount="2"
                tools:itemCount="2"
                tools:listitem="@layout/best_seller_item" />

            <ProgressBar
                android:id="@+id/bestSellerProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/primary"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/bestSellerRecyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/bestSellerRecyclerView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:focusable="false"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="62dp"
            android:gravity="center"
            android:paddingVertical="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ellipse_icon"
                android:src="@drawable/ic_ellipse" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="2"
                android:fontFamily="@font/mark_pro_bold"
                android:gravity="center|start"
                android:text="@string/explorer"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardItemCountCardView"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:cardBackgroundColor="@color/primary"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/bagIcon"
                    app:layout_constraintEnd_toEndOf="@+id/bagIcon"
                    app:layout_constraintStart_toEndOf="@+id/bagIcon"
                    app:layout_constraintTop_toTopOf="@+id/bagIcon">

                    <TextView
                        android:id="@+id/cartItemCountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="1dp"
                        android:fontFamily="@font/mark_pro_normal"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        tools:text="2" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/bagIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/bag_icon"
                    android:src="@drawable/ic_bag"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/favoritesIcon"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_weight="1"
                android:contentDescription="@string/heart_icon"
                android:src="@drawable/ic_heart_outline"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_weight="1"
                android:contentDescription="@string/user_icon"
                android:src="@drawable/ic_user"
                app:tint="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>